--- a/Application/appsettings.json
+++ b/Application/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "BlogConnectionString": "Server=localhost;Database=Blog;Trusted_Connection=True"
+    "BlogConnectionString": "Server=127.0.0.1,1433;Database=Blog;User Id=sa;Password=ErDe..!1305"
   },
   "AllowedHosts": "*"
 }
